What i call can use UI

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,5 +8,103 @@
 </head>
 <body>
 	
+	<div class="container">
+		<header class="grey-text text-darken-1 left-align">
+			<h1 class="hide-on-small-only">Contact - Boook</h1>
+			<h4 class="hide-on-med-and-up">Contact - Book</h4>
+		</header>
+		
+		<div class="filtering-section row">
+			<!-- Filtering input section -->
+				<form class="col s11 m8">
+					<div class="input-field row">
+						<span class="bi bi-filter-square prefix grey-text"></span>
+						<input id="filter" type="text" placeholder="Search...">
+					</div>
+				</form>
+			<!-- Filtering input section END-->
+			
+			<!-- Add contact pop up box section -->
+			<div class="col s1 m4">
+				<span class="bi bi-three-dots-vertical  grey-text text-darken-2 activate-btn"></span>
+				<div class="pop-up-box no-active">
+					<span class="bi bi-x-circle-fill close-btn"></span>
+					<div class="row">
+						<form class="col s12">	
+							<div class="input-field">
+								<input type="text" id="name" placeholder="Content name">
+							</div>
+							<div class="input-field">
+								<input type="number" id="number" placeholder="Content related phone number">
+							</div>
+							<div class="input-field">
+								<button type="submit" class="btn">
+									<span class="bi bi-person-plus-fill"></span> 
+								</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="contacts row">
+			<div class="col s12 m8">
+				<ul class="collection with-header">
+					<li class="collection-header grey-text text-darken-1"><h3>A</h3></li>
+					<li class="collection-item avatar">
+						<span class="bi bi-person-rolodex circle"></span>
+						<p class="title">Adam</p>
+						<p class="number grey-text text-darken-1">+2784 755 8780</p>
+						<span class="secondary-content"><span class="bi bi-three-dots more-btn"></span>
+						
+						<div class="more-tools-box no-active">
+							<p><span>Call</span></p>
+							<p><span>Edit</span></p>
+							<p><span>Delete</span></p>
+						</div>
+					
+					</li>
+					<li class="collection-item avatar">
+						<span class="bi bi-person-rolodex circle"></span>
+						<p class="title">Alex</p>
+						<p class="number">+2784 755 8780</p>
+						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
+					</li>
+					<li class="collection-item avatar">
+						<span class="bi bi-person-rolodex circle"></span>
+						<p class="title">Abram</p>
+						<p class="number">+2784 755 8780</p>
+						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
+					</li>
+					<li class="collection-item avatar">
+						<span class="bi bi-person-rolodex circle"></span>
+						<p class="title">Anorld</p>
+						<p class="number">+2784 755 8780</p>
+						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
+					</li>
+					<li class="collection-header grey-text text-darken-1"><h3>B</h3></li>
+					<li class="collection-item">
+						<span class="name">Bail</span>
+						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
+					</li>
+					<li class="collection-item">
+						<span class="name">Balsamiq</span>
+						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
+					</li>
+					<li class="collection-item">
+						<span class="name">Brad</span>
+						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
+					</li>
+					<li class="collection-item">
+						<span class="name">Bull</span>
+						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
+					</li>
+			</div>
+			</ul>
+		</div>
+
+	</div>
+
 </body>
 </html>
