better version of can use UI with horizontal pop more_tools_box

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -46,6 +46,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- Add contact pop up box section END-->
 		</div>
 
 		<div class="contacts row">
@@ -63,42 +64,18 @@
 							<p><span>Edit</span></p>
 							<p><span>Delete</span></p>
 						</div>
-					
 					</li>
 					<li class="collection-item avatar">
 						<span class="bi bi-person-rolodex circle"></span>
 						<p class="title">Alex</p>
-						<p class="number">+2784 755 8780</p>
-						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
-					</li>
-					<li class="collection-item avatar">
-						<span class="bi bi-person-rolodex circle"></span>
-						<p class="title">Abram</p>
-						<p class="number">+2784 755 8780</p>
-						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
-					</li>
-					<li class="collection-item avatar">
-						<span class="bi bi-person-rolodex circle"></span>
-						<p class="title">Anorld</p>
-						<p class="number">+2784 755 8780</p>
-						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
-					</li>
-					<li class="collection-header grey-text text-darken-1"><h3>B</h3></li>
-					<li class="collection-item">
-						<span class="name">Bail</span>
-						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
-					</li>
-					<li class="collection-item">
-						<span class="name">Balsamiq</span>
-						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
-					</li>
-					<li class="collection-item">
-						<span class="name">Brad</span>
-						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
-					</li>
-					<li class="collection-item">
-						<span class="name">Bull</span>
-						<span class="secondary-content"><span class="bi bi-three-dots"></span></span>
+						<p class="number grey-text text-darken-1">+2784 755 8780</p>
+						<span class="secondary-content"><span class="bi bi-three-dots more-btn"></span>
+						
+						<div class="more-tools-box no-active">
+							<p><span>Call</span></p>
+							<p><span>Edit</span></p>
+							<p><span>Delete</span></p>
+						</div>
 					</li>
 			</div>
 			</ul>
