--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -85,10 +85,11 @@ li {
 	padding: 15px 10px;
 	background-color: white;
 	box-shadow: 0 1px 2px rgba(0,0,0,2);
-	z-index: 1000;
+	z-index: 1000 !important;
 	border-radius: 7px;
 	transition: transform .3s ease-in-out;
-	left: -300%;
+	left: -450%;
+	top: -200%;
 }
 
 .more-tools-box > p {
